# Enviromental_Monitor

./: README.md
Target 1/Conversion/: DataConvert.c  DataConvert.h
Target 1/DHT/: dht.c  dht.h
Target 1/Display/: LCD.c  LCD.h
Target 1/I2C/: i2c.c  i2c.h
Target 1/LEDs/: BlinkLed.c  BlinkLed.h
Target 1/MQ135/: MQ135.c  MQ135.h
Target 1/Menu/: menu.c  menu.h
Target 1/OS/: OS.c  OS.h
Target 1/RTC/: DS3231.c  DS3231.h
Target 1/UART/: com_UI.c  com_UI.h
Target 1/User/: main.c
Target 1/UtilsDelay/: delay.c  delay.h
UI/: CMakeLists.txt  CO2_icon.qml  Main.qml  MonitorTab.qml  SerialConfigTab.qml  TimeSettingTab.qml
UI/Header Files/: SerialPortManger.h
UI/Source Files/: SerialPortManger.cpp  main.cpp
